# GDB-CMAKE

./: CMakeLists.txt  README.md  info.txt  main.cpp
A/: script.py
